# bazel_examples

./: .bazelrc  .travis.yml  LICENSE  README.md  WORKSPACE
compilers/arm_compiler/: BUILD  CROSSTOOL
compilers/arm_compiler/linaro_linux_gcc_5_3_1/: BUILD
cpp/: BUILD  hello_lib.cpp  hello_lib.h  main.cpp
deploy/: BUILD  BUILD.bazel
docker/: Dockerfile.amd64_docker_base
docker/base_images/: Dockerfile.aarch64_docker_base  Dockerfile.amd64_docker_base  Dockerfile.raspberrypi2_docker_base  install_prereqs.sh
docker/travis/: Dockerfile
py/: BUILD
src/cpp/: BUILD  BUILD.bazel  hello_lib.cpp  hello_lib.h  main.cpp
src/py/: BUILD  BUILD.bazel  hello.py
tools/: resin_deploy
tools/arm_compiler/: BUILD  CROSSTOOL
tools/arm_compiler/linaro_linux_gcc/: BUILD
tools/ci/: bazel_0.11.0-linux-x86_64.deb.sha256  bazelrc_travis  run_ci_tests.sh
