load("@io_bazel_rules_docker//container:container.bzl", "container_image")

config_setting(
    name = "rpi",
    values = {"cpu": "armeabi-v7a"},
)

config_setting(
    name = "jetson",
    values = {"cpu": "aarch64-linux-gnu"},
)

container_image(
    name = "hello_cpp_image",
    base = select({
        ":jetson": "@jetson_docker_base//image",
        ":rpi": "@rpi_docker_base//image",
        "//conditions:default": "@amd64_docker_base//image",
    }),
    cmd = ["/opt/hello"],
    mode = "777",
    stamp = True,
    tars = ["//src/cpp:hello_cpp_tar"],
)

container_image(
    name = "hello_py_image",
    base = select({
        ":jetson": "@jetson_docker_base//image",
        ":rpi": "@rpi_docker_base//image",
        "//conditions:default": "@amd64_docker_base//image",
    }),
    cmd = ["/opt/hello.py"],
    mode = "777",
    stamp = True,
    tars = ["//src/py:hello_py_tar"],
)
