load("@pip_requirements//:requirements.bzl", "requirement")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_deb", "pkg_tar")

py_binary(
    name = "hello",
    srcs = ["hello.py"],
)

pkg_tar(
    name = "hello_py_tar",
    srcs = [":hello"],
    # requires bazel 0.15 or newer
    include_runfiles = True,
    mode = "0755",
    package_dir = "/opt",
    visibility = ["//visibility:public"],
)
